# polvora

./: .travis.yml  CONTRIBUTING.md  INSTALL.md  NEWS  README.md  THANKS  meson.build
data/: meson.build  org.gnome.polvora.gschema.xml  polvora.appdata.xml.in  polvora.desktop.in
data/sql/: Version-001.sql  bullets.sql  calibers.sql
help/: meson.build
help/C/: bugs.page  index.page  introduction.page
po/: Makevars
src/: CaseBox.vala  Database.vala  DatatablesWindow.vala  LogMsg.vala  LogViewerDialog.vala  Logging.vala  MainBox.vala  PolvoraApplication.vala  PowderBox.vala  PrimerBox.vala  ProjectileBox.vala  meson.build  polvora.gresource.xml
src/gui/: LogViewerDialog.vala  ProjectileBox.vala
ui/: case.glade  logviewer.glade  main.glade  menu.ui  powder.glade  primer.glade  projectile.glade
